crates/vescpkg-rs-sys/tests/ui/test_support_requires_feature.stderr
error[E0433]: cannot find `test_support` in `vescpkg_rs_sys`
 --> tests/ui/test_support_requires_feature.rs:2:34
  |
2 |     let _table = vescpkg_rs_sys::test_support::empty_table();
  |                                  ^^^^^^^^^^^^ could not find `test_support` in `vescpkg_rs_sys`
  |
note: found an item that was configured out
 --> <BASE_DIR>/crates/vescpkg-rs-sys/src/lib.rs:104:6
  |
  = note: the item is gated here
